clusters/demo-000/kubernetes-api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: kubernetes
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-api.example.com
    http:
      paths:
      - backend:
          service:
            name: kubernetes
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - k8s-api.example.com

# Allow cert-manager acme solvers
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-acme-solver
  namespace: default
spec:
  ingress:
    - ports:
      - port: 8089
        protocol: TCP
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
  - Ingress
